refactor: 게시글 수정 메서드 리팩터링
- 게시글 수정 메서드 책임 분리
+ PRG 패턴 참고하여 게시글 저장 후 id 반환하도록 변환